--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -8,6 +8,6 @@ server {
   location / {
     auth_basic  "VPN Login";
     auth_basic_user_file /etc/nginx/.htpasswd;
-    proxy_pass http://openvpn:8080;
+    proxy_pass http://openvpn;
   }
 }
