--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -44,7 +44,7 @@ services:
     image: nginx:latest
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
-      - ./nginx/htpasswd:/etc/nginx/.htpasswd
+      - ./nginx/nginx-htpasswd:/etc/nginx/.htpasswd
     ports:
       - 80:80
       - 443:443
