--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,6 +7,7 @@ services:
       dockerfile: Dockerfile.openvpn
     image: openvpn:local
     command: /etc/openvpn/setup/configure.sh
+    restart: always
     environment:
       OVPN_SERVER_NET: "10.8.0.0"
       OVPN_SERVER_MASK: "255.255.255.0"
@@ -24,6 +25,7 @@ services:
       context: .
     image: ovpn-admin:local
     command: /app/ovpn-admin
+    restart: always
     environment:
       OVPN_DEBUG: "true"
       OVPN_VERBOSE: "true"
@@ -42,6 +44,7 @@ services:
       - ./ccd_master:/mnt/ccd
   nginx:
     image: nginx:latest
+    restart: always
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
       - ./nginx/nginx-htpasswd:/etc/nginx/.htpasswd
