--- a/setup/openvpn.conf
+++ b/setup/openvpn.conf
@@ -24,3 +24,4 @@ group nogroup
 push "topology subnet"
 push "route-metric 9999"
 push "dhcp-option DNS 1.1.1.1"
+client-config-dir /etc/openvpn/ccd
