on ajoute dans la conf vpn

--- a/setup/openvpn.conf
+++ b/setup/openvpn.conf
@@ -24,4 +24,6 @@ group nogroup
 push "topology subnet"
 push "route-metric 9999"
 push "dhcp-option DNS 1.1.1.1"
+#client-config-dir /etc/openvpn/ccd
+ifconfig-pool-persist /etc/openvpn/ccd/ipp.txt
 client-config-dir /etc/openvpn/ccd
